fix(site): broken layout by too wide headings

--- a/site/site.css
+++ b/site/site.css
@@ -181,6 +181,7 @@ a.editor-toggle:hover, a.editor-toggle:focus {
 
 /* hack for inline jump to fixed content */
 #doc h1, #doc h2, #doc h3, #doc h4, #doc h5, #doc h6 {
+  max-width: 40rem;
   padding-top: 16rem;
   margin-top: -16rem;
 }
